# flake8-bugbear

./: .coveragerc  .flake8  .flake8.example  .gitignore  .pre-commit-config.yaml  .travis.yml  DEVELOPMENT.md  MANIFEST.in  README.md  README.rst  bugbear.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  flake8_py_version_check.yml  pypi_upload.yml  rst_check.yml
scripts/: flake8_py_version_check.py
tests/: b001.py  b002.py  b003.py  b004.py  b005.py  b006.py  b006_b008.py  b007.py  b008_extended.py  b009_b010.py  b012.py  b013.py  b014.py  b015.py  b016.py  b017.py  b018.py  b018_classes.py  b018_functions.py  b018_modules.py  b018_nested.py  b019.py  b020.py  b022.py  b023.py  b024.py  b026.py  b027.py  b028.py  b029.py  b030.py  b031.py  b032.py  b033.py  b034.py  b035.py  b036.py  b037.py  b038.py  b039.py  (+19 more)
